2004-12-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c: do not create unwanted backups in autosave mode.

2004-12-05  Paolo Maggi  <paolo@gnome.org>

	* gedit-view.c (gedit_view_update_cursor_position_statusbar): added a comment
	for translators (see bug #104439 for more info).

2004-12-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c:
	* dialogs/gedit-close-confirmation-dialog.c: fix a ngettext string.

2004-12-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-io-error-dialogs.[ch]:
	* gedit-utils.[ch]:
	* gedit-file.c:
	* Makefile.am:

	Split error dialogs for io operations in a separate file.

2004-12-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit-mdi.c: delay the recent view creation for the toolbar
	button to the first button press. Should improve startup time.

2004-11-28  Paolo Borelli  <pborelli@katamail.com>

	* gedit-languages-manager.c: mark a global var as static.

2004-11-25  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-preferences-dialog.c: do not leak tooltips.

2004-11-21  Paolo Borelli  <pborelli@katamail.com>

	dialogs/gedit-encodings-dialog.glade2: remove separator.
	dialogs/gedit-encodings-dialog.c: use g_slist_find instead of
	reimplementing it.

2004-11-21  Paolo Borelli  <pborelli@katamail.com>

	dialogs/gedit-plugin-manager.c: use gtk_tree_model_get_iter_first
	instead of the deprecated gtk_tree_model_get_iter_root.

2004-11-18  Paolo Borelli  <pborelli@katamail.com>

	* GNOME_Gedit.idl:
	* gedit-document-server.c:
	* gedit-document.[ch]: remove more unused functions.

2004-11-18  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-dialog-replace.c: use gtk api to handle selection.
	* gedit-document.[ch]: remove unused functions.

2004-11-18  Paolo Borelli  <pborelli@katamail.com>

	* GNOME_Gedit.idl:
	* gedit-document-server.c: remove unused methods from the doc server.

2004-11-17  Paolo Borelli  <pborelli@katamail.com>

	* plugins-engine.c: use gkeyfile instead of deprecated