@@ -1,3 +1,8 @@
+2004-12-06  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-io-error-dialogs.c: add error message for the case were the
+	file we are trying to open is not a regular file.
+
 2004-12-05  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-document.c: do not create unwanted backups in autosave mode.
